Fix the style alignment

--- a/public/css/bootstrap-reset.css
+++ b/public/css/bootstrap-reset.css
@@ -360,6 +360,7 @@ ul {
 
 .table thead > tr > th, .table tbody > tr > th, .table tfoot > tr > th, .table thead > tr > td, .table tbody > tr > td, .table tfoot > tr > td {
     padding: 10px;
+	width: 75px;
 }
 
 /*pagination*/
